init all service discovery done